<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="app1">SPOTIFY STREAMER</string>
    <string name="toastapp1">"Spotify Streamer</string>
    <string name="app2a">SCORES APP</string>
    <string name="toastapp2a">Scores feature of the Super Duo</string>
    <string name="app2b">LIBRARY APP</string>
    <string name="toastapp2b">Library feature of the Super Duo</string>
    <string name="app3">BUILD IT BIGGER</string>
    <string name="toastapp3">Build It Bigger</string>
    <string name="app4">XYZ READER</string>
    <string name="toastapp4">XYZ Reader</string>
    <string name="app5">CAPSTONE: MY OWN APP</string>
    <string name="toastapp5">Capstone</string>
    <string name="action_settings">Settings</string>
</resources>
