<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:textSize="22sp"/>

    <Button
        style="@style/AppButton"
        android:text="@string/app1"
        android:id="@+id/button1"
        android:onClick="app1" />

    <Button
        style="@style/AppButton"
        android:text="@string/app2a"
        android:id="@+id/button2"
        android:onClick="app2a" />

    <Button
        style="@style/AppButton"
        android:text="@string/app2b"
        android:id="@+id/button3"
        android:onClick="app2b" />

    <Button
        style="@style/AppButton"
        android:text="@string/app3"
        android:id="@+id/button4"
        android:onClick="app3" />

    <Button
        style="@style/AppButton"
        android:text="@string/app4"
        android:id="@+id/button5"
        android:onClick="app4" />

    <Button
        style="@style/BottomAppButton"
        android:text="@string/app5"
        android:id="@+id/button6"
        android:onClick="app5" />

</LinearLayout>


